[gd_scene load_steps=5 format=3 uid="uid://cc47ti5t6e3cl"]

[ext_resource type="Texture2D" uid="uid://b3sc5wnq4wbdd" path="res://Images/background_image.png" id="1_4ryyo"]
[ext_resource type="Script" path="res://scripts/TitleScreen.gd" id="1_arrd7"]
[ext_resource type="FontFile" uid="uid://c3dp3iioy5ff3" path="res://Fonts/grandstander_5.0.20/ttf/grandstander-latin-900-normal.ttf" id="3_sfngf"]
[ext_resource type="FontFile" uid="uid://sed201pbsvle" path="res://Fonts/grandstander_5.0.20/ttf/grandstander-latin-500-italic.ttf" id="4_lp2ne"]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_arrd7")

[node name="BackgroundImage2" type="Sprite2D" parent="."]
position = Vector2(575, 323)
scale = Vector2(2.24609, 2.52344)
texture = ExtResource("1_4ryyo")

[node name="StartButton" type="Button" parent="."]
visibility_layer = 512
layout_mode = 0
offset_left = 50.0
offset_top = 400.0
offset_right = 430.0
offset_bottom = 488.0
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0.686275, 0.321569, 0.0117647, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_colors/icon_normal_color = Color(1, 1, 1, 1)
theme_override_colors/icon_focus_color = Color(1, 1, 1, 1)
theme_override_colors/icon_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_hover_color = Color(1, 1, 1, 1)
theme_override_colors/icon_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_disabled_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_sfngf")
theme_override_font_sizes/font_size = 35
text = "Start"

[node name="Quit" type="Button" parent="."]
visibility_layer = 512
layout_mode = 0
offset_left = 720.0
offset_top = 400.0
offset_right = 1100.0
offset_bottom = 488.0
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0.686275, 0.321569, 0.0117647, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_sfngf")
theme_override_font_sizes/font_size = 35
text = "Quit"

[node name="Title" type="Label" parent="."]
visibility_layer = 512
layout_mode = 0
offset_left = 61.0
offset_top = 129.0
offset_right = 754.0
offset_bottom = 266.0
theme_override_colors/font_color = Color(0.685744, 0.319698, 0.0129001, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_lp2ne")
theme_override_font_sizes/font_size = 100
text = "Package Panic"
horizontal_alignment = 1

[node name="HSlider" type="HSlider" parent="."]
offset_left = 37.0
offset_top = 617.0
offset_right = 258.0
offset_bottom = 633.0
min_value = -30.0
max_value = 0.0

[node name="Volume" type="Label" parent="."]
layout_mode = 0
offset_left = 41.0
offset_top = 590.0
offset_right = 129.0
offset_bottom = 618.0
theme_override_colors/font_color = Color(0.686275, 0.321569, 0.0117647, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_sfngf")
theme_override_font_sizes/font_size = 20
text = "Volume: "

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
[connection signal="value_changed" from="HSlider" to="." method="_on_h_slider_value_changed"]
